<resources>
    <string name="app_name">Daily</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_punching">打卡</string>
    <string name="drawer_diary">日记</string>
    <string name="drawer_memo">备忘</string>
    <string name="drawer_days_matter">纪念日</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_underway">正在进行</string>
    <string name="tab_finished">已完成</string>
    <string name="tab_deleted">已删除</string>
    <string name="tab_backward">倒数日</string>
    <string name="tab_forward">正数日</string>
    <string name="title_punch">打卡</string>
    <string name="title_memo">备忘</string>
    <string name="title_bigday">纪念日</string>
    <string name="title_diary">日记</string>
    <string name="bigday_backward_title">距离%s还有</string>
    <string name="bigday_forward_title">%s已经</string>
    <string name="date_everyday">每天</string>
    <string name="date_mon">周一</string>
    <string name="date_tue">周二</string>
    <string name="date_wed">周三</string>
    <string name="date_thu">周四</string>
    <string name="date_fri">周五</string>
    <string name="date_sat">周六</string>
    <string name="date_sun">周日</string>
    <string name="cpunch_title_hint">标题</string>
    <string name="cpunch_desc_hint">描述</string>
    <string name="title_cpunch">新建打卡</string>
    <string name="cpunch_confirm">确定</string>
    <string name="cpunch_aim_title">目标打卡次数</string>
    <string name="cpunch_time_title">打卡时间</string>
    <string name="cpunch_duration">是否记录打卡时长</string>
    <string name="cpunch_remind_title">是否提醒</string>
    <string name="cbigday_title_hint">标题</string>
    <string name="cbigday_time_title">设置时间</string>
    <string name="cbigday_tags_title">设置标签</string>
    <string name="title_cbigday">新建纪念日</string>
    <string name="cdiary_image">添加图片</string>
    <string name="cdiary_edit">编辑</string>
    <string name="cdiary_title">写日记</string>
    <string name="cmemo_remind">添加提醒</string>
    <string name="title_cmemo">新建备忘</string>
    <string name="comma">,</string>
    <string name="cpunch_max">不限</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="priority_high">高</string>
    <string name="priority_default">默认</string>
    <string name="priority_low">低</string>
    <string name="cpunch_priority">优先级</string>
    <string name="cpunch_out_of_maxlen">超过长度限制</string>
    <string name="cpunch_title_required">请输入标题</string>
    <string name="format_date_time">yyyy-MM-dd HH:mm</string>

    <string name="action_edit">com.wqy.action.EDIT</string>
    <string name="action_view">com.wqy.action.VIEW</string>
    <string name="action_create">com.wqy.action.CREATE</string>
    <string name="footer_no_more">没有更多了</string>
    <string name="saving_data">正在保存数据，请稍等...</string>
    <string name="reminder_info">点击查看详情</string>
    <string name="delete_bigday">删除后无法找回,您确定要删除吗</string>
    <string name="deleting_data">正在删除...</string>
    <string name="cmemo_empty_content">内容不能为空</string>
    <string name="menu_delete">删除</string>
    <string name="cmemo_set_deleted">删除后可在已删除中找回</string>
</resources>
