<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_punch"
            android:icon="@drawable/ic_turned_in_black_24dp"
            android:title="@string/drawer_punching" />
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/ic_mode_edit_black_24dp"
            android:title="@string/drawer_diary" />
        <item
            android:id="@+id/nav_memo"
            android:icon="@drawable/ic_note_black_24dp"
            android:title="@string/drawer_memo" />
        <item
            android:id="@+id/nav_bidday"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/drawer_days_matter" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
